--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -2,8 +2,37 @@
     background-color: transparent;
     border: 0;
     border-radius: 0;
+
+    & #navbar--main {
+        border: 0;
+    }
+
+    & .navbar-toggle span.icon-bar {
+        background-color: white;
+    }
+}
+
+@include respond-to(sm) {
+    .navbar--offerr {
+        background-color: $secondary-1;
+
+        & ul.nav.navbar-nav {
+            text-align: center;
+        }
+    }
 }
 
 .navbar.navbar-default.navbar--offerr li > a {
     color: white;
+}
+
+.navbar--offerr .navbar--offerr__logo {
+    float: left;
+    height: 0;
+}
+
+@include respond-to(sm) {
+    .navbar--offerr .navbar--offerr__logo img.navbar--offerr__img {
+            height: 44px;
+    }
 }
